<!--
Created by Wade Grimm

-->
<resources>
    <string name="app_name">Workshop8</string>
    <string name="addition_content_like_packages_etc">Additional content like Packages,etc</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="bookings">Bookings</string>
    <string name="agents">Agents</string>
    <string name="travelexperts_logo">TravelExperts Logo</string>
    <string name="AgentFirstName">First Name:</string>
    <string name="AgentMiddleInitial">Middle Initial:</string>
    <string name="AgentLastName">Last Name:</string>
    <string name="BusPhone">Business Phone:</string>
    <string name="AgentEmail">Email:</string>
    <string name="AgentPosition">Position:</string>
    <string name="AgencyID">Agency ID</string>
    <string name="AgentID">Agent ID:</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="tap_agent_name_see_details">Tap Agent name see details</string>
    <string name="add_agent">Add Agent</string>
    <string name="delete">Delete</string>
</resources>
